added report + clean up

--- a/TP_IFT/TP2/TP2-Multicut.ipynb
+++ b/TP_IFT/TP2/TP2-Multicut.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "759810bb-0bb3-4d2f-b4e8-ef2754e0c22a",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "id": "e1e353a3-2b3d-478a-9972-7133ee82c441",
    "metadata": {},
    "outputs": [
@@ -28,13 +28,13 @@
        "GLPK.Optimizer"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Constructions des 2 vecteurs de tailles 3^5=243x1 pour chaque scénario possible\n",
+    "# Construction des 2 vecteurs de tailles 3^5=243x1 pour chaque scénario possible\n",
     "demands1 = [150 160 170]\n",
     "demands2 = [100 120 135]\n",
     "demands3 = [250 270 300]\n",
@@ -57,7 +57,7 @@
     "price = 24\n",
     "waste_cost = 4\n",
     "cap = [500 450 650]\n",
-    "\n",
+    "nScenarios = 243\n",
     "# J'ai choisi GLPK ici car c'est plus vite sur mon PC et le problème peut être résolu linéairement\n",
     "#solver = HiGHS.Optimizer\n",
     "solver = GLPK.Optimizer"
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "id": "422acd82-f5cf-4e06-9c1d-6bc9143d129b",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
        "firststage (generic function with 1 method)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,10 +85,11 @@
     "function firststage()\n",
     "    m = Model(solver)\n",
     "    @variable(m, Ship[i in 1:factories, j in 1:markets] >= 0)\n",
-    "    @variable(m, θ[i in 1:243])\n",
+    "    @variable(m, θ[i in 1:nScenarios])\n",
     "    @constraint(m, [i in 1:factories], sum(Ship[i,j] for j in 1:markets) <= cap[i])\n",
     "    \n",
     "    # Pas encore theta car il n'y pas encore de contrainte sur la variable\n",
+    "    # Ici on combine c1*Ship + c2*Prod à (c1+c2)Ship car Prod = sum(Ship)\n",
     "    @objective(m, Min,\n",
     "        sum(total_cost[i,j]*Ship[i,j] for i in 1:factories, j in 1:markets)\n",
     "    )\n",
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "id": "05506c5f-fd73-4144-b6c9-af814a2bf377",
    "metadata": {},
    "outputs": [
@@ -109,7 +110,7 @@
        "master_objective (generic function with 1 method)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +121,7 @@
     "function master_objective(m::Model, Ship, θ)\n",
     "    @objective(m, Min,\n",
     "        sum(total_cost[i,j]*Ship[i,j] for i in 1:factories, j in 1:markets)\n",
-    "        + sum(θ[i] for i in 1:243)\n",
+    "        + sum(θ[i] for i in 1:nScenarios)\n",
     "    )\n",
     "    return m\n",
     "end"
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "id": "d9551367-0652-4856-b051-1acd3836ea6a",
    "metadata": {},
    "outputs": [
@@ -138,7 +139,7 @@
        "secondstageCore (generic function with 1 method)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "id": "60c63c53-67dd-42fd-afbd-56ea6b98291f",
    "metadata": {},
    "outputs": [
@@ -178,7 +179,7 @@
        "secondstage (generic function with 1 method)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "id": "b23b6348-aae6-4773-80c8-e76d0ea4e7ec",
    "metadata": {},
    "outputs": [
@@ -220,7 +221,7 @@
        "secondstagefeasibility (generic function with 1 method)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "id": "c56ccf6a-e42a-49fa-b133-33841b66fb8a",
    "metadata": {},
    "outputs": [
@@ -263,7 +264,7 @@
        "stop (generic function with 2 methods)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,18 +274,18 @@
     "function stop(expected_Q, θ, k, tol = 1e-10)\n",
     "    nmax = 200  # circuit breaker\n",
     "    counting = 0\n",
-    "    for i in 1:243 \n",
+    "    for i in 1:nScenarios\n",
     "        if ((θ[i] > expected_Q[i])|| isapprox(θ[i]-expected_Q[i], 0.0; atol=tol, rtol=0))\n",
     "            counting+=1\n",
     "        end\n",
     "    end\n",
-    "    return (counting >= 243 || k==nmax)\n",
+    "    return (counting == nScenarios || k==nmax)\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "id": "b7699fee-822f-471f-a14d-9c4e48a54536",
    "metadata": {},
    "outputs": [
@@ -294,15 +295,14 @@
        "lshaped_multicut (generic function with 2 methods)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "function lshaped_multicut(scenarios, prob, verbose=false)\n",
-    "    nScenarios = 243\n",
-    "    \n",
+    "   \n",
     "    k = 0       # iteration index\n",
     "    nfcuts = 0  # number of feasibility cuts\n",
     "    nocuts = 0  # number of optimality cuts\n",
@@ -313,7 +313,7 @@
     "    Q_list = [+Inf for i in 1:nScenarios]\n",
     "    valθ = [-Inf for i in 1:nScenarios]\n",
     "\n",
-    "    # Commence de l'algo L-shaped\n",
+    "    # Début de l'algo L-shaped\n",
     "    while (!stop(Q_list, valθ, k))\n",
     "        Q_list = []\n",
     "        k += 1\n",
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "id": "673cac23-9168-4f04-ad4b-238f2cd1f989",
    "metadata": {
     "scrolled": true
@@ -436,7 +436,7 @@
        "Names registered in the model: Ship, con, θ)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +447,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
+   "id": "07353c18-d633-4725-96dd-2a3d1b589525",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solved in 8 iterations.\n",
+      "Solved using 0 nfcuts.\n",
+      "Solved using 1944 nocuts.\n"
+     ]
+    }
+   ],
+   "source": [
+    "println(\"Solved in \", k, \" iterations.\")\n",
+    "println(\"Solved using \", nfcuts, \" nfcuts.\")\n",
+    "println(\"Solved using \", nocuts, \" nocuts.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "e9f3b330-c66c-4e7b-ac1e-f424fc3a6af8",
    "metadata": {},
    "outputs": [
@@ -457,7 +479,7 @@
        "-10792.999999999989"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 14,
    "id": "c51467ed-c7ef-49ae-b456-88f7ecf08310",
    "metadata": {},
    "outputs": [
@@ -481,7 +503,7 @@
        "   0.0  100.0  270.0    0.0  100.0"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,6 +511,52 @@
    "source": [
     "value.(Ship)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "e642cea6-d429-4942-bd2d-e068bdbfb8e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  247.376 ms (3842809 allocations: 161.92 MiB)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(8, 0, 1944, VariableRef[Ship[1,1] Ship[1,2] … Ship[1,4] Ship[1,5]; Ship[2,1] Ship[2,2] … Ship[2,4] Ship[2,5]; Ship[3,1] Ship[3,2] … Ship[3,4] Ship[3,5]], A JuMP Model\n",
+       "Minimization problem with:\n",
+       "Variables: 258\n",
+       "Objective function type: AffExpr\n",
+       "`AffExpr`-in-`MathOptInterface.GreaterThan{Float64}`: 1457 constraints\n",
+       "`AffExpr`-in-`MathOptInterface.LessThan{Float64}`: 3 constraints\n",
+       "`VariableRef`-in-`MathOptInterface.GreaterThan{Float64}`: 15 constraints\n",
+       "Model mode: AUTOMATIC\n",
+       "CachingOptimizer state: ATTACHED_OPTIMIZER\n",
+       "Solver name: GLPK\n",
+       "Names registered in the model: Ship, con, θ)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "@btime lshaped_multicut(scenarios, prob)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16476e7a-9bda-434e-9ce6-e134c0ee07c6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
